<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.alunos.despensainteligente.CriarListaActivity">

    <TextView android:text="@string/tituloCriarLista" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titulo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:textColor="#ff000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeLista"
        android:id="@+id/nomeLista"
        android:layout_marginTop="65dp"
        android:textColor="#ff000000"
        android:textSize="20dp"
        android:layout_below="@+id/titulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddUltima"
        android:id="@+id/buttonAdd"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputNomeLista"
        android:textColor="#ff000000"
        android:layout_alignBottom="@+id/nomeLista"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCancelar"
        android:id="@+id/buttonCancelar"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/inputNomeLista"
        android:layout_toLeftOf="@+id/buttonSalvar"
        android:layout_toStartOf="@+id/buttonSalvar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSalvar"
        android:id="@+id/buttonSalvar"
        android:layout_alignTop="@+id/buttonCancelar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
