<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/tituloMain" android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/titulo"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textColor="#ff000000"
        android:fontFamily="Serif"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCriarLista"
        android:id="@+id/buttonCriarLista"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonVerLista"
        android:id="@+id/buttonVerLista"
        android:layout_below="@+id/buttonCriarLista"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
